# soat-payment-api

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.test.yml  docker-compose.yml  logging.ini  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: ci_cd.yml
docker-compose-env/: test_database.env.example
payment_api/: .env.example  config.py  factory.py
payment_api/application/commands/: __init__.py  create_payment_from_order.py  finalize_payment_by_mercado_pago_payment_id.py  find_payment_by_id.py  render_qr_code.py
payment_api/application/use_cases/: __init__.py  create_payment.py  create_payment_from_order.py  finalize_payment_by_mercado_pago_payment_id.py  find_payment_by_id.py  render_qr_code.py
payment_api/domain/: exceptions.py
payment_api/domain/entities/: __init__.py  payment.py  product.py
payment_api/domain/events/: __init__.py  domain_event.py  payment_closed.py
payment_api/domain/ports/: __init__.py  payment_closed_publisher.py  payment_gateway.py  (+1 more)
payment_api/entrypoints/: api.py  order_created_listener.py
payment_api/infrastructure/: config.py  factory.py  mercado_pago_client.py  qr_code_renderer.py
scripts/: start_dev_api.sh
settings/: test_database.env.example
terraform/: .terraform.lock.hcl  backend.hcl.example  data.tf  k8s_app_configmap.tf  k8s_app_deployment.tf  k8s_app_hpa.tf  k8s_app_ingress_controller.tf  k8s_app_secrets.tf  k8s_app_service.tf  k8s_consumer_hpa.tf  k8s_namespace.tf  k8s_order_created_listener.tf  locals.tf  providers.tf  vars.tf
(+23 files in other folders)
