[tool.poetry]
name = "soat-payment-api"
version = "0.1.0"
description = "The payment API service for Soat Tech Challenge"
authors = ["Lucas Martins Barroso <lucasmartins.av@gmail.com>"]
readme = "README.md"
packages = [{ include = "payment_api" }]

[tool.poetry.dependencies]
python = "^3.14"
pydantic = { extras = ["email"], version = "^2.12.3" }
sqlalchemy = "^2.0.44"
asyncpg = "^0.30.0"
alembic = "^1.17.0"
pydantic-settings = "^2.11.0"
fastapi = "^0.119.1"
uvicorn = "^0.38.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
